--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "element-plus": "^2.9.4",
     "less": "^4.2.2",
+    "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "axios": "^1.7.9",
+    "echarts": "^5.6.0",
+    "mockjs": "^1.1.0",
     "vite": "^6.1.0"
   }
 }
